[BufAlloc] Initial setup for low-level buffer allocation pass

--- a/lib/Co4LL/CMakeLists.txt
+++ b/lib/Co4LL/CMakeLists.txt
@@ -2,6 +2,7 @@ add_mlir_dialect_library(MLIRCo4LL
         Co4LLDialect.cpp
         Co4LLOps.cpp
         EmitXML.cpp
+        BufAlloc.cpp
 
         ADDITIONAL_HEADER_DIRS
         ${PROJECT_SOURCE_DIR}/include/Co4LL
