[LinkByGPUID] Pass to simply merge GPU blocks.
TBs stay separate here, there's no merging of TBs.

--- a/lib/Co4LL/CMakeLists.txt
+++ b/lib/Co4LL/CMakeLists.txt
@@ -3,6 +3,7 @@ add_mlir_dialect_library(MLIRCo4LL
         Co4LLOps.cpp
         EmitXML.cpp
         BufAlloc.cpp
+        LinkByGPUID.cpp
 
         ADDITIONAL_HEADER_DIRS
         ${PROJECT_SOURCE_DIR}/include/Co4LL
