--- a/lib/Co4LL/CMakeLists.txt
+++ b/lib/Co4LL/CMakeLists.txt
@@ -4,6 +4,7 @@ add_mlir_dialect_library(MLIRCo4LL
         Co4LLOps.cpp
         EmitXML.cpp
         LinkByGPUID.cpp
+        ThreadblockSSA.cpp
 
         ADDITIONAL_HEADER_DIRS
         ${PROJECT_SOURCE_DIR}/include/Co4LL
