[Co4HL/Lower] Initial version of lowering from high-level to low-level dialect

--- a/lib/Co4HL/CMakeLists.txt
+++ b/lib/Co4HL/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_mlir_dialect_library(MLIRCo4HL
         Co4HLDialect.cpp
         Co4HLOps.cpp
+        Lower.cpp
 
         ADDITIONAL_HEADER_DIRS
         ${PROJECT_SOURCE_DIR}/include/Co4HL
